--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
+    "firebase": "^9.17.2",
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
