--- a/functions/.eslintrc.json
+++ b/functions/.eslintrc.json
@@ -1,10 +1,10 @@
-module.exports = {
-  root: true,
-  env: {
-    es6: true,
-    node: true,
+ {
+  "root": true,
+  "env": {
+    "es6": true,
+    "node": true,
   },
-  extends: [
+  "extends": [
     "eslint:recommended",
     "plugin:import/errors",
     "plugin:import/warnings",
@@ -12,21 +12,20 @@ module.exports = {
     "google",
     "plugin:@typescript-eslint/recommended",
   ],
-  parser: "@typescript-eslint/parser",
-  parserOptions: {
-    project: ["tsconfig.json", "tsconfig.dev.json"],
-    sourceType: "module",
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": ["tsconfig.json", "tsconfig.dev.json"],
+    "sourceType": "module",
   },
-  ignorePatterns: [
+  "ignorePatterns": [
     "/lib/**/*", // Ignore built files.
   ],
-  plugins: [
+  "plugins": [
     "@typescript-eslint",
     "import",
   ],
-  rules: {
-    "quotes": ["error", "double"],
+  "rules": {
     "import/no-unresolved": 0,
     "indent": ["error", 2]
-  },
-};
+  }
+}
