--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
+    "cors": "^2.8.5",
     "fast-equals": "^5.0.0",
     "firebase": "^9.17.2",
     "google-map-react": "^2.2.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.0.1",
+    "@types/cors": "^2",
     "@types/google-map-react": "^2",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.24",
