--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "google-map-react": "^2.2.0",
     "next": "13.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.0.1",
