--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.17.2",
     "google-map-react": "^2.2.0",
     "next": "13.0.1",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.1"
