--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.0"
   },
